# FYP-1-violence-detection

./: .gitignore  README.md  app.py  pyproject.toml
